--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body id="body">
     
+    <p>◉ The sentence in h1 will be printed in p : </p>
+    <h1 id="id01">My First Page</h1>
+    <p id="id02"></p>
+    <hr>
+
     <button class="btn" onclick="myFunction()">Click Here</button>
     <p>◉ On pressing the button <u>the Text color and BackgroundColor will change:</u> </p>
     <h1 id="myDemo">
